--- a/HealthCare/output.css
+++ b/HealthCare/output.css
@@ -7,26 +7,14 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-blue-100: oklch(93.2% 0.032 255.585);
-    --color-blue-200: oklch(88.2% 0.059 254.128);
-    --color-blue-400: oklch(70.7% 0.165 254.624);
-    --color-blue-600: oklch(54.6% 0.245 262.881);
-    --color-blue-700: oklch(48.8% 0.243 264.376);
-    --color-blue-800: oklch(42.4% 0.199 265.638);
-    --color-gray-100: oklch(96.7% 0.003 264.542);
-    --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-400: oklch(70.7% 0.022 261.325);
-    --color-gray-500: oklch(55.1% 0.027 264.364);
-    --color-gray-700: oklch(37.3% 0.034 259.733);
-    --color-gray-800: oklch(27.8% 0.033 256.848);
-    --color-gray-900: oklch(21% 0.034 264.665);
-    --color-black: #000;
+    --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-amber-400: oklch(82.8% 0.189 84.429);
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
-    --font-weight-medium: 500;
-    --font-weight-bold: 700;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
     --radius-2xl: 1rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
@@ -178,50 +166,41 @@
   }
 }
 @layer utilities {
-  .collapse {
-    visibility: collapse;
-  }
   .absolute {
     position: absolute;
-  }
-  .fixed {
-    position: fixed;
   }
   .relative {
     position: relative;
   }
-  .right-7 {
-    right: calc(var(--spacing) * 7);
+  .top-0 {
+    top: calc(var(--spacing) * 0);
   }
-  .bottom-6 {
-    bottom: calc(var(--spacing) * 6);
+  .top-0\.5 {
+    top: calc(var(--spacing) * 0.5);
+  }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
+  .right-0\.5 {
+    right: calc(var(--spacing) * 0.5);
   }
   .bottom-\[20\%\] {
     bottom: 20%;
   }
-  .left-6 {
-    left: calc(var(--spacing) * 6);
-  }
   .left-\[48\%\] {
     left: 48%;
   }
-  .col-span-3 {
-    grid-column: span 3 / span 3;
+  .z-1 {
+    z-index: 1;
   }
-  .m-auto {
-    margin: auto;
+  .z-2 {
+    z-index: 2;
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
-  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
-  }
-  .block {
-    display: block;
   }
   .flex {
     display: flex;
@@ -247,6 +226,9 @@
   .h-\[80vh\] {
     height: 80vh;
   }
+  .h-\[98\%\] {
+    height: 98%;
+  }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
@@ -259,35 +241,23 @@
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
+  .w-\[45\%\] {
+    width: 45%;
+  }
   .w-\[60\%\] {
     width: 60%;
   }
-  .w-\[80\%\] {
-    width: 80%;
-  }
-  .w-full {
-    width: 100%;
-  }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
-  .shrink-0 {
-    flex-shrink: 0;
+  .flex-1 {
+    flex: 1;
   }
   .border-collapse {
     border-collapse: collapse;
-  }
-  .rotate-180 {
-    rotate: 180deg;
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
   .resize {
     resize: both;
-  }
-  .grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -301,11 +271,11 @@
   .grid-cols-\[1fr_1\.5fr\] {
     grid-template-columns: 1fr 1.5fr;
   }
-  .grid-cols-\[60\%_1fr_1fr\] {
-    grid-template-columns: 60% 1fr 1fr;
+  .grid-cols-\[2fr_1fr_1fr\] {
+    grid-template-columns: 2fr 1fr 1fr;
   }
-  .flex-col {
-    flex-direction: column;
+  .flex-wrap {
+    flex-wrap: wrap;
   }
   .items-center {
     align-items: center;
@@ -316,23 +286,23 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-evenly {
+    justify-content: space-evenly;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
-  .gap-4 {
-    gap: calc(var(--spacing) * 4);
-  }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
-  .gap-9 {
-    gap: calc(var(--spacing) * 9);
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
   }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
@@ -340,51 +310,30 @@
   .gap-12 {
     gap: calc(var(--spacing) * 12);
   }
-  .gap-16 {
-    gap: calc(var(--spacing) * 16);
-  }
   .gap-18 {
     gap: calc(var(--spacing) * 18);
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
   }
-  .gap-30 {
-    gap: calc(var(--spacing) * 30);
+  .overflow-hidden {
+    overflow: hidden;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
+  .rounded-\[10px\] {
+    border-radius: 10px;
+  }
   .rounded-\[100\%\] {
     border-radius: 100%;
-  }
-  .rounded-full {
-    border-radius: calc(infinity * 1px);
   }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-1 {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
-  .border-t-0 {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 0px;
-  }
-  .border-b-0 {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 0px;
-  }
-  .border-gray-200 {
-    border-color: var(--color-gray-200);
-  }
   .bg-\[\#0A2E72\] {
     background-color: #0A2E72;
-  }
-  .bg-\[\#2d2d2d\] {
-    background-color: #2d2d2d;
   }
   .bg-\[\#0088FF\] {
     background-color: #0088FF;
@@ -395,29 +344,17 @@
   .bg-\[\#F8F8F8\] {
     background-color: #F8F8F8;
   }
-  .bg-black {
-    background-color: var(--color-black);
-  }
-  .bg-blue-100 {
-    background-color: var(--color-blue-100);
-  }
-  .bg-blue-400 {
-    background-color: var(--color-blue-400);
-  }
-  .bg-blue-700 {
-    background-color: var(--color-blue-700);
-  }
-  .bg-gray-100 {
-    background-color: var(--color-gray-100);
-  }
-  .bg-gray-200 {
-    background-color: var(--color-gray-200);
+  .bg-amber-400 {
+    background-color: var(--color-amber-400);
   }
   .bg-white {
     background-color: var(--color-white);
   }
   .bg-\[url\(21\.svg\)\] {
     background-image: url(21.svg);
+  }
+  .bg-\[url\(footer\.png\)\] {
+    background-image: url(footer.png);
   }
   .bg-\[url\(imagehome\.png\)\] {
     background-image: url(imagehome.png);
@@ -428,58 +365,69 @@
   .bg-size-\[100\%_80vh\] {
     background-size: 100% 80vh;
   }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
+  .p-0 {
+    padding: calc(var(--spacing) * 0);
   }
-  .p-5 {
-    padding: calc(var(--spacing) * 5);
+  .\!px-6 {
+    padding-inline: calc(var(--spacing) * 6) !important;
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
+  .\!py-6 {
+    padding-block: calc(var(--spacing) * 6) !important;
   }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
+  .\!py-10 {
+    padding-block: calc(var(--spacing) * 10) !important;
   }
-  .p-24 {
-    padding: calc(var(--spacing) * 24);
+  .\!py-26 {
+    padding-block: calc(var(--spacing) * 26) !important;
+  }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
+  .py-2\.5 {
+    padding-block: calc(var(--spacing) * 2.5);
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
-  .pb-10 {
-    padding-bottom: calc(var(--spacing) * 10);
+  .pr-\[20\%\] {
+    padding-right: 20%;
+  }
+  .pl-5 {
+    padding-left: calc(var(--spacing) * 5);
+  }
+  .pl-\[20\%\] {
+    padding-left: 20%;
   }
   .text-center {
     text-align: center;
   }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  .\!text-lg {
+    font-size: var(--text-lg) !important;
+    line-height: var(--tw-leading, var(--text-lg--line-height)) !important;
   }
-  .leading-6 {
-    --tw-leading: calc(var(--spacing) * 6);
-    line-height: calc(var(--spacing) * 6);
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
+  .leading-8 {
+    --tw-leading: calc(var(--spacing) * 8);
+    line-height: calc(var(--spacing) * 8);
   }
   .leading-10 {
     --tw-leading: calc(var(--spacing) * 10);
     line-height: calc(var(--spacing) * 10);
   }
-  .font-bold {
-    --tw-font-weight: var(--font-weight-bold);
-    font-weight: var(--font-weight-bold);
-  }
-  .font-medium {
-    --tw-font-weight: var(--font-weight-medium);
-    font-weight: var(--font-weight-medium);
-  }
   .text-\[\#0A2E72\] {
     color: #0A2E72;
   }
-  .text-blue-600 {
-    color: var(--color-blue-600);
+  .text-\[\#5E6F8E\] {
+    color: #5E6F8E;
   }
-  .text-gray-500 {
-    color: var(--color-gray-500);
+  .text-\[\#0088FF\] {
+    color: #0088FF;
+  }
+  .text-amber-300 {
+    color: var(--color-amber-300);
   }
   .text-white {
     color: var(--color-white);
@@ -491,27 +439,24 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .hover\:bg-blue-100 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-blue-100);
-      }
+  .max-lg\:grid-cols-2 {
+    @media (width < 64rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
-  .focus\:ring-4 {
-    &:focus {
-      --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
-      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-    }
-  }
-  .focus\:ring-blue-200 {
-    &:focus {
-      --tw-ring-color: var(--color-blue-200);
-    }
-  }
-  .max-md\:col-span-2 {
+  .max-md\:block {
     @media (width < 48rem) {
-      grid-column: span 2 / span 2;
+      display: block;
+    }
+  }
+  .max-md\:hidden {
+    @media (width < 48rem) {
+      display: none;
+    }
+  }
+  .max-md\:grid-cols-1 {
+    @media (width < 48rem) {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
   .max-md\:grid-cols-2 {
@@ -519,93 +464,108 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
-  .max-sm\:col-span-1 {
-    @media (width < 40rem) {
-      grid-column: span 1 / span 1;
+  .max-md\:flex-col {
+    @media (width < 48rem) {
+      flex-direction: column;
     }
   }
-  .max-sm\:grid-cols-1 {
-    @media (width < 40rem) {
-      grid-template-columns: repeat(1, minmax(0, 1fr));
+  .max-md\:text-lg {
+    @media (width < 48rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
-  .max-sm\:p-8 {
+  .max-sm\:w-2 {
     @media (width < 40rem) {
-      padding: calc(var(--spacing) * 8);
+      width: calc(var(--spacing) * 2);
     }
   }
-  .lg\:grid-cols-2 {
-    @media (width >= 64rem) {
+  .max-sm\:w-2\.5 {
+    @media (width < 40rem) {
+      width: calc(var(--spacing) * 2.5);
+    }
+  }
+  .max-sm\:w-4 {
+    @media (width < 40rem) {
+      width: calc(var(--spacing) * 4);
+    }
+  }
+  .max-sm\:w-8 {
+    @media (width < 40rem) {
+      width: calc(var(--spacing) * 8);
+    }
+  }
+  .max-sm\:w-12 {
+    @media (width < 40rem) {
+      width: calc(var(--spacing) * 12);
+    }
+  }
+  .max-sm\:w-20 {
+    @media (width < 40rem) {
+      width: calc(var(--spacing) * 20);
+    }
+  }
+  .max-sm\:grid-cols-2 {
+    @media (width < 40rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
-  .lg\:p-46 {
-    @media (width >= 64rem) {
-      padding: calc(var(--spacing) * 46);
+  .max-sm\:px-\[10\%\] {
+    @media (width < 40rem) {
+      padding-inline: 10%;
     }
   }
-  .rtl\:text-right {
-    &:where(:dir(rtl), [dir="rtl"], [dir="rtl"] *) {
-      text-align: right;
+  .max-sm\:pr-\[10\%\] {
+    @media (width < 40rem) {
+      padding-right: 10%;
     }
   }
-  .dark\:border-gray-700 {
-    @media (prefers-color-scheme: dark) {
-      border-color: var(--color-gray-700);
+  .max-sm\:pl-\[10\%\] {
+    @media (width < 40rem) {
+      padding-left: 10%;
     }
   }
-  .dark\:bg-gray-800 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-gray-800);
-    }
-  }
-  .dark\:bg-gray-900 {
-    @media (prefers-color-scheme: dark) {
-      background-color: var(--color-gray-900);
-    }
-  }
-  .dark\:text-gray-400 {
-    @media (prefers-color-scheme: dark) {
-      color: var(--color-gray-400);
-    }
-  }
-  .dark\:text-white {
-    @media (prefers-color-scheme: dark) {
-      color: var(--color-white);
-    }
-  }
-  .dark\:hover\:bg-gray-800 {
-    @media (prefers-color-scheme: dark) {
-      &:hover {
-        @media (hover: hover) {
-          background-color: var(--color-gray-800);
-        }
-      }
-    }
-  }
-  .dark\:focus\:ring-blue-800 {
-    @media (prefers-color-scheme: dark) {
-      &:focus {
-        --tw-ring-color: var(--color-blue-800);
-      }
+  .max-sm\:text-xs {
+    @media (width < 40rem) {
+      font-size: var(--text-xs);
+      line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
 }
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
+@layer base {
+  body {
+    font-family: "Ubuntu", sans-serif;
+  }
+  section {
+    padding: 0 20%;
+    width: 100%;
+  }
 }
-section {
-  padding: 10px 20%;
-  width: 100%;
+h3 {
+  font-size: xx-large;
+}
+h2 {
+  font-size: x-large;
+  color: #0A2E72;
+}
+h1 {
+  color: #0A2E72;
+  font-weight: 900;
+  font-size: xx-large;
+}
+button {
+  background-color: blue;
+  padding: 5px 20px;
+  border-radius: 50px;
+  color: white;
 }
 #header {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 #bgimg {
-  padding: 15rem 20%;
+  padding: 10rem 20%;
+  margin-top: -25px;
 }
 #first-grid > div {
   border: thin solid rgba(195, 195, 195, 0.408);
@@ -631,25 +591,17 @@ section {
 #white-item {
   padding: 20px;
 }
-h3 {
-  font-size: xx-large;
-  color: #0A2E72;
-}
-h2 {
-  font-size: x-large;
-  color: #0A2E72;
-}
-h1 {
-  font-size: large;
-  color: #0A2E72;
-  font-weight: 900;
-  font-size: xx-large;
-}
-button {
-  background-color: blue;
-  padding: 5px 20px;
-  border-radius: 50px;
-  color: white;
+@media (max-width: 640px) {
+  #bgimg {
+    padding: 10rem 10%;
+    margin-top: -25px;
+  }
+  h1 {
+    font-size: 15px;
+  }
+  #patient-section h3 {
+    font-size: 15px;
+  }
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -680,79 +632,10 @@ button {
   syntax: "*";
   inherits: false;
 }
-@property --tw-font-weight {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-shadow-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-shadow-alpha {
-  syntax: "<percentage>";
-  inherits: false;
-  initial-value: 100%;
-}
-@property --tw-inset-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-inset-shadow-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-inset-shadow-alpha {
-  syntax: "<percentage>";
-  inherits: false;
-  initial-value: 100%;
-}
-@property --tw-ring-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ring-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-inset-ring-color {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-inset-ring-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
-}
-@property --tw-ring-inset {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ring-offset-width {
-  syntax: "<length>";
-  inherits: false;
-  initial-value: 0px;
-}
-@property --tw-ring-offset-color {
-  syntax: "*";
-  inherits: false;
-  initial-value: #fff;
-}
-@property --tw-ring-offset-shadow {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0 0 #0000;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
@@ -764,22 +647,7 @@ button {
       --tw-skew-y: initial;
       --tw-border-style: solid;
       --tw-leading: initial;
-      --tw-font-weight: initial;
       --tw-outline-style: solid;
-      --tw-shadow: 0 0 #0000;
-      --tw-shadow-color: initial;
-      --tw-shadow-alpha: 100%;
-      --tw-inset-shadow: 0 0 #0000;
-      --tw-inset-shadow-color: initial;
-      --tw-inset-shadow-alpha: 100%;
-      --tw-ring-color: initial;
-      --tw-ring-shadow: 0 0 #0000;
-      --tw-inset-ring-color: initial;
-      --tw-inset-ring-shadow: 0 0 #0000;
-      --tw-ring-inset: initial;
-      --tw-ring-offset-width: 0px;
-      --tw-ring-offset-color: #fff;
-      --tw-ring-offset-shadow: 0 0 #0000;
     }
   }
 }
